style: prevent overflow only in x axis

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   display: flex;
   flex: 1;
   flex-direction: column;
